// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`accessibility should add/remove accessibility tree properties if state changes programmatically: Of Input when state = error 1`] = `
{
  "checked": false,
  "invalid": "true",
  "name": "Some label. Some error message.",
  "role": "checkbox",
}
`;

exports[`accessibility should add/remove accessibility tree properties if state changes programmatically: Of Input when state = none 1`] = `
{
  "checked": false,
  "name": "Some label",
  "role": "checkbox",
}
`;

exports[`accessibility should add/remove accessibility tree properties if state changes programmatically: Of Input when state = success 1`] = `
{
  "checked": false,
  "name": "Some label. Some success message.",
  "role": "checkbox",
}
`;

exports[`accessibility should add/remove accessibility tree properties if state changes programmatically: Of Message when state = error 1`] = `
{
  "children": [
    {
      "children": [
        {
          "role": "none",
        },
      ],
      "role": "none",
    },
    {
      "name": "Some error message.",
      "role": "StaticText",
    },
  ],
  "name": "",
  "role": "alert",
}
`;

exports[`accessibility should add/remove accessibility tree properties if state changes programmatically: Of Message when state = success 1`] = `
{
  "children": [
    {
      "children": [
        {
          "role": "none",
        },
      ],
      "role": "none",
    },
    {
      "name": "Some success message.",
      "role": "StaticText",
    },
  ],
  "name": "",
  "role": "status",
}
`;

exports[`accessibility should expose correct accessibility tree properties in error state: Of Input 1`] = `
{
  "checked": false,
  "invalid": "true",
  "name": "Some label. Some error message.",
  "role": "checkbox",
}
`;

exports[`accessibility should expose correct accessibility tree properties in error state: Of Message 1`] = `
{
  "children": [
    {
      "children": [
        {
          "role": "none",
        },
      ],
      "role": "none",
    },
    {
      "name": "Some error message.",
      "role": "StaticText",
    },
  ],
  "name": "",
  "role": "alert",
}
`;

exports[`accessibility should expose correct accessibility tree when loading=true 1`] = `
{
  "children": [
    {
      "children": [
        {
          "name": "Some Label",
          "role": "StaticText",
        },
      ],
      "role": "none",
    },
    {
      "children": [
        {
          "checked": false,
          "disabled": true,
          "name": "Some Label",
          "role": "checkbox",
        },
      ],
      "role": "none",
    },
    {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "name": " ",
                  "role": "StaticText",
                },
              ],
              "role": "none",
            },
            {
              "children": [
                {
                  "role": "none",
                },
                {
                  "role": "none",
                },
              ],
              "role": "none",
            },
          ],
          "name": "Loading state of Some Label",
          "role": "alert",
        },
      ],
      "name": "",
      "role": "generic",
    },
  ],
  "disabled": true,
  "name": "",
  "role": "LabelText",
}
`;

exports[`accessibility should expose correct initial accessibility tree 1`] = `
{
  "checked": false,
  "name": "Some Label",
  "role": "checkbox",
}
`;
